--- a/rootdir/init.yoshino.rc
+++ b/rootdir/init.yoshino.rc
@@ -19,6 +19,9 @@ import init.yoshino.pwr.rc
 on init
     write /sys/block/zram0/max_comp_streams 8
 
+    # Wifi firmware reload path
+    chown wifi wifi /sys/module/bcmdhd/parameters/firmware_path
+
 on fs
     symlink /dev/block/platform/soc/1da4000.ufshc /dev/block/bootdevice
 
